ncc/testsuite/positive/common-supertype.n
class A {}
class B : A { public this () {} }
class C : A { public this () {} }

variant foo {
  | F_a
  | F_b
}

module M {
  public Main () : void {
    def x =
      match (F_a ()) {
        | F_a => B ()
        | F_b => (C () : A)
      };
    def _ =
      match (null) {
        | F_a => x
        | F_b => x
      };
    ()
  }
}
