ncc/testsuite/negative/conversion.n
struct S1 { x : int; y : int; }
struct S2 { x : int; y : int; }

class C{ 
  public static Main () : void
  {
    _ = S1 () :> S2; // E: cannot convert S1 to S2
  }

  public static foo () : void
  {
    _ = "string" :> string; // W: there is no check needed to cast string to string
  }
}
